- download data import files
- list query uses tablename as a regex pattern
- function to check if a date is a weekend day
- ability to parse csv files

1.0.4:
Major changes:
- Support for JSON schema API calls
- Fix bug related to order of multiple public directories
- Make __FILENAME__, __DIRNAME__ and __REALPATH__ available in client-side JavaScript
- Support custom headers in emails
- New function grape.send_email (_to TEXT, _template TEXT, _template_data JSON, _headers JSON)
- New API call  /grape/send_mail (send email via API call)
- New API calls GrapeInsertRecord, GrapeUpdateRecord and GrapeDeleteRecord
- SQL functions to manipulate access_path
- Examples of API calls added in examples/ directory
- New configuration option compile_js_dirs

1.0.5:
- New grape setting "dataimport_in_background" (boolean) will start a background process for the data import process function
- Role-based access control for processes (with utility functions and new table)
- New SQL functions: grape.set_session_username, grape.set_session_user_id, grape.upsert_process
- New API call GrapeListProcessCategories
- Removed DB function grape.resend_user_password
- GrapeForgotPassword will now reset the password if passwords in the system are hashed
- Fixed bug GR29 in list query (Ettienne)

1.0.6:
Bug fixes:
- Fix password sent in password forgot email
- Fixed GrapeClient issues with uploading files
- Fixed data import upload if spreadsheet has missing header (this caused the server to restart)
- Fixed race condition - queries are allowed through, even though grape.user_id is not set in the SQL
- Better error reporting on data import process

New features:
- Script to upload files to /grape/data_import/upload and optionally process it
- Modular grape-manage script that will replace manage.sh

1.0.7:
- New API call PGTableInformation
- Removed deprecated functionality that will send index.html if an API file could not be matched
- New view grape.v_table_permissions

