@@ -7,13 +7,13 @@
 - create an authentication provider
 - compiled javascript needs to be cached
 
-- accept HTTP authentication instead of X-SessionID (look at Authorization header)
-
-- pdf generator: pass xsl parameters to the pdfgenerator
 
 - API call to get table information (part of table_operations.sql)
+
 
 Done:
 - create API calls from JSON schema
 - send email via API call
+- pdf generator: pass xsl parameters to the pdfgenerator
+- accept HTTP authentication instead of X-SessionID (look at Authorization header)
 
