@@ -2,7 +2,6 @@
 module.exports.grape = require('./lib/grape');
 module.exports.db = require('./lib/db');
 module.exports.app = require('./lib/app');
-module.exports.session = require('./lib/session');
 module.exports.utils = require('./lib/util');
 module.exports.excel2007 = require('./lib/excel2007');
 module.exports.hexavigesimal = require('./lib/hexavigesimal');
