@@ -93,7 +93,7 @@ BEGIN
 		RETURN grape.api_result_error('User not active', 3);
 	END IF;
 
-	_found = TRUE;
+	_found := TRUE;
 
 	IF _persistant = TRUE THEN
 		SELECT session_id INTO _session_id FROM grape."session" WHERE user_id=rec.user_id::INTEGER;
@@ -102,23 +102,25 @@ BEGIN
 		END IF;
 	END IF;
 
-	-- generate unique session id
-	WHILE _found = TRUE LOOP
-		_session_id := CONCAT(rec.user_id, '-', grape.random_string(15));
-		IF
-			EXISTS (SELECT session_id FROM grape."session" WHERE session_id=_session_id::TEXT)
-			OR EXISTS (SELECT session_id FROM grape."session_history" WHERE session_id=_session_id::TEXT)
-		THEN
-			_found := TRUE;
-		ELSE
-			_found := FALSE;
-		END IF;
-	END LOOP;
+	IF _found = TRUE THEN
+		-- generate unique session id
+		WHILE _found = TRUE LOOP
+			_session_id := CONCAT(rec.user_id, '-', grape.random_string(15));
+			IF
+				EXISTS (SELECT session_id FROM grape."session" WHERE session_id=_session_id::TEXT)
+				OR EXISTS (SELECT session_id FROM grape."session_history" WHERE session_id=_session_id::TEXT)
+			THEN
+				_found := TRUE;
+			ELSE
+				_found := FALSE;
+			END IF;
+		END LOOP;
 
-	RAISE DEBUG 'User % logged in successfuly from %. Session ID is now %', _user, _ip_address, _session_id;
+		RAISE DEBUG 'User % logged in successfuly from %. Session ID is now %', _user, _ip_address, _session_id;
 
-	INSERT INTO grape."session" (session_id, ip_address, user_id, date_inserted, last_activity)
-		VALUES (_session_id, _ip_address, rec.user_id, CURRENT_TIMESTAMP, CURRENT_TIMESTAMP);
+		INSERT INTO grape."session" (session_id, ip_address, user_id, date_inserted, last_activity)
+			VALUES (_session_id, _ip_address, rec.user_id, CURRENT_TIMESTAMP, CURRENT_TIMESTAMP);
+	END IF;
 
 	SELECT array_agg(role_name) INTO _user_roles FROM grape."user_role" WHERE user_id=rec.user_id::INTEGER;
 
